[tool.poetry]
name = "hledger_helper"
version = "0.1.0"
description = "Various helper scripts for hledger plaintext accounting"
authors = ["Paul Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# `poetry install`
# `poetry add`
# `poetry remove`
# `poetry env use 3.12`
python = "^3.11"
ruff = "^0.5.0"
pre-commit = "^3.7.0"
yfinance = "^0.2.40"
blessed = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
